--- a/NubeBooks/Views/Admin/Contacto.cshtml
+++ b/NubeBooks/Views/Admin/Contacto.cshtml
@@ -22,22 +22,22 @@ else { cadena = "Actualizar"; }
                         <div class="col-md-4">
                             <label>Nombre del Contacto</label>
                             @Html.TextBoxFor(u => u.Nombre, new { @class = "form-control", @placeholder = "Ingrese el nombre del Contacto", @type = "text" })
-                            @Html.ValidationMessageFor(u => u.Nombre)
+                            @Html.ValidationMessageFor(u => u.Nombre, "", new { @style = "color:red;" })
                         </div>
                         <div class="col-md-4">
                             <label>Email</label>
                             @Html.TextBoxFor(u => u.Email, new { @class = "form-control", @placeholder = "Ingrese el email", @type = "email" })
-                            @Html.ValidationMessageFor(u => u.Email)
+                            @Html.ValidationMessageFor(u => u.Email, "", new { @style = "color:red;" })
                         </div>
                         <div class="col-md-2">
                             <label>Teléfono</label>
                             @Html.TextBoxFor(u => u.Telefono, new { @class = "form-control", @placeholder = "Ingrese el teléfono", @type = "text" })
-                            @Html.ValidationMessageFor(u => u.Telefono)
+                            @Html.ValidationMessageFor(u => u.Telefono, "", new { @style = "color:red;" })
                         </div>
                         <div class="col-md-2">
                             <label>Celular</label>
                             @Html.TextBoxFor(u => u.Celular, new { @class = "form-control", @placeholder = "Ingrese el celular", @type = "text" })
-                            @Html.ValidationMessageFor(u => u.Celular)
+                            @Html.ValidationMessageFor(u => u.Celular, "", new { @style = "color:red;" })
                         </div>
                     </div>
                 </div>
