--- a/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
+++ b/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
@@ -443,6 +443,9 @@
     <script src="~/Content/themes/admin-nb/libs/jquery/bootstrap/dist/js/bootstrap.js"></script>
     <!-- Angular -->
     <script src="~/Content/themes/angular/myApp.js"></script>
+    <!-- Validation -->
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     <!-- App -->
     <script src="~/Content/themes/admin-nb/js/ui-load.js"></script>
     <script src="~/Content/themes/admin-nb/js/ui-jp.config.js"></script>
